<resources>
    <string name="app_name">LICITATIE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="userCreated">User has been created successfully</string>
    <string name="errUser">Username Required</string>
    <string name="errEmail">Email Required</string>
    <string name="errEmailValid">Valid Email Needed</string>
    <string name="errPass">Password Required</string>
    <string name="errPassValid">Password must be at least 6 characters!</string>
    <string name="errJoin">Failed to join! Try again!</string>
    <string name="loginPass">Must enter a password!</string>
    <string name="userLogin">Must be a valid username!</string>
    <string name="LoginEmail">Must be a valid email</string>
    <string name="loginSuccess">Logged in successfully!</string>
    <string name="loginFailed">Failed to login! Try again !</string>
    <string name="adminCredentials">Admin Credentials Required!</string>
    <string name="upload">upload</string>
    <string name="saveproduct">Save Product</string>
    <string name="selectafilemessage">Must select a file first</string>
    <string name="problemuploadingfilemessage">There was a problem uploading your file!</string>
    <string name="productsavesuccess">Product save successfully!</string>
    <string name="denumire">Denumire</string>
    <string name="pret">Pret</string>
    <string name="descriere">Descriere</string>
    <string name="deletedsucc">Deleted Successfully!</string>
    <string name="deletederr">There was a problem deleting the file!</string>
    <string name="deletedsuccess">Deleted Successfully</string>
    <string name="update">UPDATE</string>
    <string name="updateprodadb">Update Produs</string>
    <string name="updatedsuccess">Updated Successfully!</string>
    <string name="auctionstart">Started auction for current product ...</string>
    <string name="parse">parse</string>
    <string name="main_adv">Special items, special for you. Buy now!</string>
    <string name="button_login_main_text">LOGIN</string>
    <string name="button_login_join_text">JOIN</string>
    <string name="question_main">Are you the host?</string>
    <string name="login_admin_button_main">Login as admin</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="username_hint">Username</string>
    <string name="t_c_txt">By joining this app, you agree with our Terms and Conditions.</string>
    <string name="join_button_txt">Join</string>
    <string name="welcome_admin_txt">Welcome, Admin!</string>
    <string name="view_products_button_txt">VIEW PRODUCTS</string>
    <string name="view_auctions_button_txt">VIEW AUCTIONS</string>
    <string name="hello_txt">Hello!</string>
    <string name="auction_txt">AUCTION</string>
    <string name="valuta_txt">VALUTA</string>
</resources>