<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ios_prod_tv_den"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_5"
            android:text="@string/denumire"
            android:textColor="@color/black"
            android:drawablePadding="@dimen/dp_5"
            android:drawableStart="@drawable/pen"
            android:textSize="15dp"
            android:drawableLeft="@drawable/pen" />

        <TextView
            android:id="@+id/ios_prod_tv_pret"
            android:layout_width="wrap_content"
            android:drawablePadding="@dimen/dp_5"
            android:drawableStart="@drawable/pricetag"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_5"
            android:text="@string/pret"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:drawableLeft="@drawable/pricetag" />

        <TextView
            android:id="@+id/ios_prod_tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_5"
            android:text="@string/descriere"
            android:textColor="@color/black"
            android:drawablePadding="@dimen/dp_5"
            android:drawableStart="@drawable/descriere"
            android:textSize="@dimen/dp_15"
            android:drawableLeft="@drawable/descriere" />

        <ImageView
            android:id="@+id/ios_prod_imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_200"/>



    </LinearLayout>
</androidx.cardview.widget.CardView>