<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context=".MainActivity">

    <ImageView
        android:layout_width="500dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@id/iOS_tv_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/mm"
        />

    <TextView
        android:id="@+id/iOS_tv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/main_adv"
        android:textColor="@color/black"
        android:textSize="10dp"
        app:layout_constraintBottom_toTopOf="@id/iOS_btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/iOS_btn_login"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginLeft="100dp"
        android:background="@color/darkgray"
        android:src="@drawable/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iOS_tv_main_info"
        android:layout_marginBottom="30dp"
        />

    <TextView
        android:id="@+id/iOS_tv_main_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/button_login_main_text"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/playfair_display"
        android:textColor="@color/black"
        android:textSize="13dp"
        android:layout_marginStart="95dp"
        app:layout_constraintBottom_toTopOf="@id/iOS_tv_main_info"
        app:layout_constraintEnd_toEndOf="@+id/iOS_btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iOS_btn_login"
        android:layout_marginLeft="95dp" />

    <TextView
        android:id="@+id/iOS_tv_main_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/button_login_join_text"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:fontFamily="@font/playfair_display"
        android:textSize="13dp"
        android:layout_marginEnd="95dp"
        app:layout_constraintBottom_toTopOf="@id/iOS_tv_main_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/iOS_btn_signup"
        app:layout_constraintTop_toBottomOf="@id/iOS_btn_signup"
        android:layout_marginRight="95dp" />

    <ImageButton
        android:id="@+id/iOS_btn_signup"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iOS_tv_main_info"
        android:gravity="center"
        android:background="@color/darkgray"
        android:src="@drawable/plus24"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp" />

    <TextView
        android:id="@+id/iOS_tv_main_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playfair_display"
        android:text="@string/question_main"
        android:textColor="@color/darkgray"
        android:textSize="13dp"
        android:paddingTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iOS_btn_login_admin"
        android:gravity="center"
        />

    <Button
        android:id="@+id/iOS_btn_login_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_admin_button_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:background="@color/white"
        android:outlineProvider="none"
        android:layout_marginBottom="30dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>