<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".UserActivity">

    <TextView
        android:id="@+id/iOS_user_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/dp_50"
        android:layout_marginTop="100dp"
        android:text="@string/hello_txt"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="monospace"
        app:layout_constraintBottom_toTopOf="@id/iOS_user_auction_btn"
        />

    <Button
        android:id="@+id/iOS_user_auction_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/iOS_user_valuta_btn"
        android:text="@string/auction_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rectangle"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/iOS_user_valuta_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valuta_txt"
        android:background="@drawable/rectangle"
        android:textColor="@color/white"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="100dp"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/iOS_animation_view_products"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_enableMergePathsForKitKatAndAbove="true"
        app:lottie_fileName="background.json"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_loop="true"
        />

</androidx.constraintlayout.widget.ConstraintLayout>