<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AdminActivity">

    <TextView
        android:id="@+id/iOS_admin_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/iOS_animation_view_products"
        android:gravity="center"
        android:text="@string/welcome_admin_txt"
        android:fontFamily="monospace"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/iOS_animation_view_products"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_enableMergePathsForKitKatAndAbove="true"
        app:lottie_fileName="box.json"
        app:layout_constraintBottom_toTopOf="@id/iOS_admin_products_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_loop="true"
        />

    <Button
        android:id="@+id/iOS_admin_products_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/iOS_animation_view_auction"
        android:text="@string/view_products_button_txt"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/border"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/iOS_animation_view_auction"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_enableMergePathsForKitKatAndAbove="true"
        app:lottie_fileName="money.json"
        app:layout_constraintBottom_toTopOf="@id/iOS_admin_auction_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_loop="true"
        />

    <Button
        android:id="@+id/iOS_admin_auction_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/view_auctions_button_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/border"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>